# socket-tictactoe

./: CMakeLists.txt  JsonSocket.h  client.cpp  server.cpp
